--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1394,6 +1394,15 @@
                             </div>
                         </div>
                         
+                        <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px" class="border-bottom">
+                                <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#LatinChainEcosystem</div></strong></h5>
+                            </div>
+                            <div style="margin-bottom:5px">
+                                <img src="/website_pinetwork_games_odoo/static/src/img/latinchain-ecosystem.png?v=1.101" alt="LatinChain Ecosystem" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" />
+                            </div>
+                        </div>
+                        
                         <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
                             <div style="margin-bottom:5px" class="border-bottom">
                                 <h5 translate="no"><strong><div style="display:inline;">#StakePi &#128202;</div></strong></h5>
