--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,7 +946,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.646"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.648"></script>
                     
                     <script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -1399,7 +1399,7 @@
                                 <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#LatinChainEcosystem</div></strong></h5>
                             </div>
                             <div style="margin-bottom:5px">
-                                <img src="/website_pinetwork_games_odoo/static/src/img/latinchain-ecosystem.png?v=1.101" alt="LatinChain Ecosystem" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" />
+                                <img src="/website_pinetwork_games_odoo/static/src/img/latinchain-ecosystem.png?v=1.101" alt="LatinChain Ecosystem" class="img-fluid latinchain-ecosystem" style="cursor: pointer; max-width: 350px; border-radius: 20px;" width="100%" height="200px" />
                             </div>
                         </div>
                         
