--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -203,7 +203,7 @@
                                 <div style="margin-bottom:10px" t-if="onlymainnet" class="col-12">
                                     <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                                         <div style="margin-bottom:5px" class="border-bottom">
-                                            <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount</div></strong></h5>
+                                            <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount #OnMainnet</div></strong></h5>
                                         </div>
                                         <div style="margin-bottom:5px">
                                             <a href="https://latinchain.pinet.com/pinetwork" target="_blank"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
