--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -200,7 +200,7 @@
                                     <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="col-12 href-external btn btn-success font-weight-bold text-white border-success" style="border: 2px solid; filter: contrast(100%) !important;"><strong><div><i class="fa-solid fa-fingerprint"></i></div><div style="font-size:100%;" translate="no"><div style="display: inline">DONATE</div> <div style="display: inline">(UNLOCK)</div></div><div style="font-size:80%;" translate="no"><div style="display: inline">Earn Latin points (<t t-esc="amount_latin_pay" />)</div> <div style="display: inline">(Mainnet)</div></div></strong></a>
                                 </div>
                                 
-                                <div style="margin-bottom:10px" t-if="onlymainnet" class="col-12">
+                                <div style="margin-bottom:10px" class="col-12">
                                     <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                                         <div style="margin-bottom:5px" class="border-bottom">
                                             <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount #Mainnet</div></strong></h5>
