--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1385,14 +1385,26 @@
                         
                         <div id="loading_word_under" style="margin-top:10px; width: 100%; display: none;"></div>
                         
-                        <div t-if="discount_active and discount_percentage" style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
-                            <div style="margin-bottom:5px" class="border-bottom">
-                                <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount <t t-esc="discount_percentage"/>%</div></strong></h5>
+                        <t t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
+                            <div t-if="discount_active and discount_percentage" style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount <t t-esc="discount_percentage"/>%</div></strong></h5>
+                                </div>
+                                <div style="margin-bottom:5px">
+                                    <a href="/pinetwork"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
+                                </div>
                             </div>
-                            <div style="margin-bottom:5px">
-                                <a href="/pinetwork"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
+                        </t>
+                        <t t-elif="mainnet in ['Testnet ON', 'Testnet OFF']">
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount #Mainnet</div></strong></h5>
+                                </div>
+                                <div style="margin-bottom:5px">
+                                    <a href="/pinetwork"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
+                                </div>
                             </div>
-                        </div>
+                        </t>
                         
                         <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                             <div style="margin-bottom:5px" class="border-bottom">
