--- a/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
+++ b/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
@@ -971,7 +971,7 @@
                                 $(".open_streaming").click(function(){
                                     var streaming_url = validateYouTubeUrl($(this).attr("videourl"));
                                     streaming_url = streaming_url[1];
-                                    $.colorbox({width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="https://www.youtube.com/embed/' + streaming_url + '?autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
+                                    $.colorbox({fixed: true, width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="https://www.youtube.com/embed/' + streaming_url + '?autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
                                 });
                             
                                 $(".on-page-search").on("input.highlight", function() {
@@ -1195,7 +1195,7 @@
                                 $(".open_streaming").click(function(){
                                     var streaming_url = validateYouTubeUrl($(this).attr("videourl"));
                                     streaming_url = streaming_url[1];
-                                    $.colorbox({width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="https://www.youtube.com/embed/' + streaming_url + '?autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
+                                    $.colorbox({fixed: true, width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="https://www.youtube.com/embed/' + streaming_url + '?autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
                                 });
                             
                                 $(".on-page-search").on("input.highlight", function() {
@@ -1868,7 +1868,7 @@
                             
                             $(".open_streaming").click(function(){
                                 var streaming_url = $(this).attr("videourl");
-                                $.colorbox({width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="' + streaming_url + '&amp;autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
+                                $.colorbox({fixed: true, width: "80%", height: "80%", maxWidth: "80%", maxHeight: "80%", html:'<iframe id="latin-chain" width="100%" height="100%" src="' + streaming_url + '&amp;autoplay=1&amp;loop=1" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>'});
                             });
                         } );
                     </script>
