--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -207,9 +207,25 @@
                                 </div>
                             </div>
                             
+                            <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
+                                <!-- LatinChain Ad responsive 2 -->
+                                
+                                <ins class="adsbygoogle"
+                                     style="display:block"
+                                     data-ad-client="ca-pub-2334449220276386"
+                                     data-ad-slot="9525388880"
+                                     data-ad-format="auto"
+                                     data-full-width-responsive="true"></ins>
+                                <script>
+                                     (adsbygoogle = window.adsbygoogle || []).push({});
+                                </script>
+                                
+                                <br/>
+                            </div>
+                            
                             <div class="row">    
-                                <div style="margin-bottom:10px" class="col-12">
-                                    <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="col-12">
+                                    <div style="padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                                         <div style="margin-bottom:5px" class="border-bottom">
                                             <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount #Mainnet</div></strong></h5>
                                         </div>
@@ -217,8 +233,12 @@
                                             <a href="https://latinchain.pinet.com/pinetwork" target="_blank"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
                                         </div>
                                     </div>
-                                    
-                                    <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                </div>
+                            </div>
+                            
+                            <div class="row">    
+                                <div style="margin-bottom:10px" class="col-12">
+                                    <div style="padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                                         <div style="margin-bottom:5px" class="border-bottom">
                                             <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#HolidaySeasonCollection</div></strong></h5>
                                         </div>
