--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,7 +946,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.652"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.653"></script>
                     
                     <script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -1802,6 +1802,9 @@
                             </div>-->
                             <div style="margin-bottom:5px">
                                 <button class="col-12 btn btn-info partners font-weight-bold" ><div style="display:inline;"><i class="fa-solid fa-handshake"></i></div> <div style="display:inline;">partners</div></button>
+                            </div>
+                            <div style="margin-bottom: 5px">
+                                <button class="col-12 btn btn-info latinchain-token font-weight-bold" ><div style="display:inline;"><i class="fa-solid fa-money-bill-1"></i></div> <div style="display:inline;">latinchain token</div></button>
                             </div>
                             <div class="div-certification" style="display: none; margin-bottom: 5px">
                                 <button class="col-12 btn btn-info certification font-weight-bold" ><div style="display:inline;"><i class="fa-solid fa-certificate"></i></div> <div style="display:inline;">certification</div></button>
