--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -518,6 +518,148 @@
             </t>
 		</template>
         
+        <template id="latinchain_token_whitepaper" name="LatinChain token whitepaper View">
+            <t t-call="web.layout">
+                &lt;!DOCTYPE html&gt;
+                <html>
+                    <head>
+                        <meta charset="UTF-8"/>
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+                        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+                        <title>LatinChain Token Whitepaper</title>
+                        <meta name="apple-mobile-web-app-capable" content="yes" />
+                        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+                        <meta name="viewport" content="width=device-width, user-scalable=yes"/>
+                        
+                        <meta property="og:title" content="LatinChain Token Whitepaper"/>
+                        <meta property="og:description" content="LatinChain Token Whitepaper"/>
+                        <meta property="og:image" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
+                        
+                        <link href="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg" rel="shortcut icon" />
+                        
+                        <meta name="thumbnail" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
+                        
+                        <!-- ios support -->
+                        <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+                        <meta name="theme-color" content="#db4938" />
+                        
+                        <meta name="application-name" content="LatinChain Token Whitepaper"/>
+                        
+                        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+                        
+                        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+                        
+                        <!--<base target="_blank" />-->
+                        
+                        <style>
+                            .border-gradient-rounded {
+                              /* Border */
+                              border: 4px solid transparent;
+                              border-radius: 20px;
+                              background: 
+                                linear-gradient(to right, white, white), 
+                                linear-gradient(to right, red , blue); 
+                              background-clip: padding-box, border-box;
+                              background-origin: padding-box, border-box;
+                              color: black !important;
+                              filter: contrast(100%) !important;
+                              
+                              margin-bottom:5px;
+                              padding:10px;
+                              width: 100%;
+                            }
+                            
+                            .darkmode--activated .border-gradient-rounded {
+                              /* Border */
+                              border: 4px solid transparent;
+                              border-radius: 20px;
+                              background: 
+                                linear-gradient(to right, #021526, #021526), 
+                                linear-gradient(to right, red , blue); 
+                              background-clip: padding-box, border-box;
+                              background-origin: padding-box, border-box;
+                              color: white !important;
+                              filter: contrast(100%) !important;
+                              
+                              margin-bottom:5px;
+                              padding:10px;
+                              width: 100%;
+                            }
+                        </style>
+                        
+                    </head>
+
+                    <body>
+                        <div class="container form-group" style="text-align:center; max-width: 810px;">
+                            <br/>
+                            <h3>LatinChain Token Whitepaper</h3>
+                            <br/>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">LatinChain Token foundations</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    LatinChain Token is based on the LatinChain Platform project:<br/>
+                                    Mainnet: https://latinchain.pinet.com<br/>
+                                    Testnet: https://latinchaintest9869.pinet.com
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Max Supply</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    100,000,000 LatinChain
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Initial Pi Liquidity Pool Supply</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    1,000 LatinChain | 1,000 Pi
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Reserved for Pi Liquidity Pool Supply</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    10,000,000 LatinChain
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Reserved for Other Exchanges</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    10,000,000 LatinChain
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Reserved for Developers and LatinChain related</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    20,000,000 LatinChain
+                                </div>
+                            </div>
+                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px" class="border-bottom">
+                                    <h5 translate="no">Reserved for LatinChain future and current projects, and LatinChain reserve</h5>
+                                </div>
+                                <div style="margin-bottom:5px; padding: 5px">
+                                    60,000,000 LatinChain
+                                </div>
+                            </div>
+                        </div>
+                        <br/><br/><br/><br/><br/><br/><br/>
+                    </body>
+                </html>
+            </t>
+		</template>
+        
         <template id="certification" name="Certification View">
             <t t-call="web.layout">
                 &lt;!DOCTYPE html&gt;
