--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -600,9 +600,11 @@
                                     <h5 translate="no">LatinChain Token foundations</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    LatinChain Token is based on the LatinChain Platform project (online since 2021):<br/>
-                                    Mainnet: https://latinchain.pinet.com<br/>
-                                    Testnet: https://latinchaintest9869.pinet.com
+                                    <strong>
+                                        LatinChain Token is based on the LatinChain Platform project (online since 2021):<br/><br/>
+                                        Mainnet:<br/>https://latinchain.pinet.com<br/>
+                                        Testnet:<br/>https://latinchaintest9869.pinet.com
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -610,8 +612,10 @@
                                     <h5 translate="no">Max Supply</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    100,000,000 LatinChain<br/>
-                                    100,000,000,000 Pi
+                                    <strong>
+                                        100,000,000 LatinChain<br/>
+                                        100,000,000,000 Pi
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -619,7 +623,9 @@
                                     <h5 translate="no">Initial Pi Liquidity Pool Supply</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    1,000 LatinChain | 1,000 Pi
+                                    <strong>
+                                        1,000 LatinChain | 1,000 Pi
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -627,7 +633,9 @@
                                     <h5 translate="no">Reserved for Pi Liquidity Pool Supply</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    10,000,000 LatinChain
+                                    <strong>
+                                        10,000,000 LatinChain
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -635,7 +643,9 @@
                                     <h5 translate="no">Reserved for Other Exchanges</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    10,000,000 LatinChain
+                                    <strong>
+                                        10,000,000 LatinChain
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -643,7 +653,9 @@
                                     <h5 translate="no">Reserved for Developers and LatinChain related</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    20,000,000 LatinChain
+                                    <strong>
+                                        20,000,000 LatinChain
+                                    </strong>
                                 </div>
                             </div>
                             <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -651,7 +663,9 @@
                                     <h5 translate="no">Reserved for LatinChain future and current projects, and LatinChain reserve</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    60,000,000 LatinChain
+                                    <strong>
+                                        60,000,000 LatinChain
+                                    </strong>
                                 </div>
                             </div>
                         </div>
