--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -624,7 +624,7 @@
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
                                     <strong>
-                                        1,000 LatinChain | 1,000 Pi (Pi Network)
+                                        1,000 LatinChain | 1,000 Pi
                                     </strong>
                                 </div>
                             </div>
